# tommy-doggie-talkie

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: analysis_jobs.py  dogs.py
backend/app/core/: config.py  database.py
backend/app/services/: breed_intelligence.py  jobs.py  ml_pipeline.py  storage.py
backend/tests/: conftest.py  test_api.py
docs/: model-subtasks.md
mobile/: .env.example  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
mobile/src/: types.ts
mobile/src/api/: client.ts  supabase.ts
mobile/src/components/: Panel.tsx  PrimaryButton.tsx
mobile/src/screens/: AuthScreen.tsx  BreedPanel.tsx  DogForm.tsx  DogList.tsx  HabitsPanel.tsx  ResultPanel.tsx  UploadPanel.tsx
supabase/: config.toml  schema.sql
supabase/migrations/: 20260609043000_initial_schema.sql  20260609062000_add_breed_intelligence.sql
