[project]
name = "dog-translator-backend"
version = "0.1.0"
description = "FastAPI backend for multimodal dog behavior interpretation."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "sqlmodel>=0.0.22",
    "supabase>=2.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
ml = [
    "ultralytics>=8.3.0",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "opencv-python>=4.10.0",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",
    "torchaudio>=2.3.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
